--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="content">
                             <header>
                                 <h1>Hi, I’m Rahul Garasiya<br />
-                                & Business Analytics</h1>
+                                & I am a Business Analytics</h1>
                             </header>
                         </div>
                         <span class="image object">
